dts/testData/inspections/nodeContentOrder/InvalidDeleteProperty.dtsi
prop = "value";

name {};

<error descr="Properties should be defined before nodes">/delete-property/</error> prop;